--- a/src/WpfMath.Tests/WpfMath.Tests.fsproj
+++ b/src/WpfMath.Tests/WpfMath.Tests.fsproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
     <PropertyGroup>
-        <TargetFrameworks>netcoreapp3.1;net461;net5.0-windows</TargetFrameworks>
+        <TargetFrameworks>netcoreapp3.1;net48</TargetFrameworks>
         <IsPackable>false</IsPackable>
         <UseWpf>true</UseWpf>
         <DebugType>Full</DebugType>
